# adventure-amethyst

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
assets/regions/: test.ron
assets/sprites/: arrow.ron  character.ron  hearts.ron  logo.ron  shield.ron  slash_attack.ron  terrain.ron
config/: display_config.ron  input.ron
src/: constants.rs  input_bindings.rs  main.rs
src/component/: animation.rs  arrow_attack.rs  character.rs  collider.rs  direction.rs  enemy.rs  faction.rs  health.rs  heart.rs  hero.rs  invulnerable.rs  knocked_back.rs  mod.rs  position.rs  removal.rs  shield.rs  slash_attack.rs  sword.rs  sword_attack.rs  terrain.rs  thrust_attack.rs  velocity.rs
src/component/animation/: directional_animation.rs  mod.rs  simple_animation.rs
src/component/behavior/: mod.rs  shoot_arrows.rs  wander.rs
src/resource/: camera.rs  entrance.rs  exit.rs  hud.rs  mod.rs  region.rs  region_data.rs  sprite_sheets.rs  textures.rs
src/state/: loading.rs  mod.rs  playing.rs
src/system/: animation.rs  attack_updates.rs  camera_control.rs  collision.rs  collision_detection.rs  control.rs  death.rs  dynamic_collision_detection.rs  enemy_control.rs  hero_control.rs  hud_updates.rs  invulnerability.rs  knockback.rs  mod.rs  motion.rs  static_collision_detection.rs  sword_attack_updates.rs  sword_positioning.rs  travel.rs
