[package]
name = "adventure"
version = "0.0.0"
authors = ["Jonathan Sharman <jonathan.sharman@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
nalgebra = "0.19.0"
ron = "0.6.2"
serde = { version = "1.0.115", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
